--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "postcss-nested": "^6.0.1",
     "postcss-selector-parser": "^6.0.15",
     "postcss-value-parser": "^4.2.0",
+    "prettier": "^3.2.5",
     "queue-microtask": "^1.2.3",
     "read-cache": "^1.0.0",
     "readdirp": "^3.6.0",
